# LifeCadenceLedger

./: .gitignore  CLAUDE.md  IMPLEMENTATION-ROADMAP.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
database/migrations/: 001_initial.sql
scripts/: generate-icon.mjs  seed-db.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CheckInForm.tsx  CheckInHistory.tsx  HabitManager.tsx  Onboarding.tsx  PatternDashboard.tsx  SettingsPanel.tsx  WeeklySummary.tsx
src/components/charts/: DayOfWeekBar.tsx  EnergyFocusTrend.tsx  HabitStreakGrid.tsx  SleepEnergyScatter.tsx
src/hooks/: use-checkins.ts  use-habits.ts  use-patterns.test.ts  use-patterns.ts
src/lib/: csv-import.test.ts  csv-import.ts  dates.test.ts  dates.ts  db.test.ts  db.ts  notifications.ts
src/types/: index.ts
