[package]
name = "life-cadence-ledger"
version = "0.1.0"
description = "Local-first daily energy, focus, habits, and sleep tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "life_cadence_ledger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
